Update search UX